--- a/index.html
+++ b/index.html
@@ -9,8 +9,46 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
-
 <body>
+  <header>
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg" aria-label="Tenth navbar example">
+      <div class="container">
+        <a class="navbar-brand fs-1 fw-bold text-secondary" href="#">BrainTech Learning</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+  
+        <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+          <ul class="navbar-nav">
+            <li class="nav-item mx-2">
+              <a class="nav-link" aria-current="page" href="#">Home </a>
+            </li>
+            <li class="nav-item  mx-2">
+              <a class="nav-link" href="#">Courses </a>
+            </li>
+            <li class="nav-item  mx-2">
+              <a class="nav-link">Deals</a>
+            </li>
+            <li class="nav-item  mx-2">
+              <a class="nav-link">Success</a>
+            </li>
+            <li class="nav-item  mx-2">
+              <a class="nav-link">About</a>
+            </li>
+            <li class="nav-item  mx-2">
+              <a class="nav-link">Register</a>
+            </li>
+          </ul>
+          <div class="col-md-3 text-end">
+            <button type="button" class="btn btn-outline-info px-4 py-2 fw-semibold">Register</button>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- Navbar End -->
+  </header>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
