--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BrainTech Learning</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
-    <!-- Navbar Start -->
+    <!---------------------
+       Navbar Start
+      --------------------->
     <nav class="navbar navbar-expand-lg" aria-label="Tenth navbar example">
       <div class="container">
         <a class="navbar-brand fs-1 fw-bold text-secondary" href="#">BrainTech Learning</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08"
+          aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-  
+
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
           <ul class="navbar-nav">
             <li class="nav-item mx-2">
@@ -46,13 +50,93 @@
         </div>
       </div>
     </nav>
-    <!-- Navbar End -->
+    <!---------------------
+       Navbar End
+      --------------------->
+
+    <!--------------------- 
+      Heading Banner Start
+    ------------------------>
+    <div id="carouselExampleFade" class="carousel carousel-white slide  carousel-fade container mt-5"
+      data-bs-ride="true">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner rounded-3 mb-5">
+        <div class="carousel-item active">
+          <img src="images/cover/cover-1.png" class="img-fluid w-100" alt="">
+          <div class="carousel-caption">
+            <div class="d-flex flex-column align-items-center mb-5">
+              <h1 class="display-4 fw-semibold">
+                <span>
+                  Get Started Digital
+                </span><br>
+                <span>Learning</span>
+              </h1>
+              <p class="fs-5">It is a long established fact that a reader will be distracted by the readable
+                content of a page when looking at its layout.</p>
+              <button class="btn btn-info py-3 px-4"><a href="" class="fw-semibold text-decoration-none text-white">Get
+                  Started</a></button>
+            </div>
+
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/cover/cover-2.png" class="img-fluid w-100" alt="">
+          <div class="carousel-caption mb-5">
+            <div class="d-flex flex-column align-items-center mb-5">
+              <h1 class="display-4 fw-semibold">
+                <span>
+                  Get Started Digital
+                </span><br>
+                <span>Learning</span>
+              </h1>
+              <p class="fs-5">It is a long established fact that a reader will be distracted by the readable
+                content of a page when looking at its layout.</p>
+              <button class="btn btn-info py-3 px-4"><a href="" class="fw-semibold text-decoration-none text-white">Get
+                  Started</a></button>
+            </div>
+
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/cover/cover-3.png" class="img-fluid w-100" alt="">
+          <div class="carousel-caption mb-5">
+            <div class="d-flex flex-column align-items-center mb-5">
+              <h1 class="display-4 fw-semibold">
+                <span>
+                  Get Started Digital
+                </span><br>
+                <span>Learning</span>
+              </h1>
+              <p class="fs-5">It is a long established fact that a reader will be distracted by the readable
+                content of a page when looking at its layout.</p>
+              <button class="btn btn-info py-3 px-4"><a href="" class="fw-semibold text-decoration-none text-white">Get
+                  Started</a></button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!---------------------
+       Heading Banner End 
+      ---------------------->
   </header>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
