--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div class="carousel-inner rounded-3 mb-5">
         <div class="carousel-item active">
-          <img src="images/cover/cover-1.png" class="img-fluid w-100" alt="">
+          <img src="images/cover/cover-1.png" class="img-fluid" alt="">
           <div class="carousel-caption">
             <div class="d-flex flex-column align-items-center mb-5">
               <h1 class="display-4 fw-semibold">
@@ -85,9 +85,9 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/cover/cover-2.png" class="img-fluid w-100" alt="">
+          <img src="images/cover/cover-2.png" class="img-fluid  " alt="">
           <div class="carousel-caption mb-5">
-            <div class="d-flex flex-column align-items-center mb-5">
+            <div class="d-flex flex-column align-items-center">
               <h1 class="display-4 fw-semibold">
                 <span>
                   Get Started Digital
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/cover/cover-3.png" class="img-fluid w-100" alt="">
+          <img src="images/cover/cover-3.png" class="img-fluid  " alt="">
           <div class="carousel-caption mb-5">
             <div class="d-flex flex-column align-items-center mb-5">
               <h1 class="display-4 fw-semibold">
@@ -135,7 +135,42 @@
       ---------------------->
   </header>
 
-
+  <main>
+    <!---------------------
+       Course Section Start 
+      ------------------------->
+      <div class="text-center fs-5 m-5">
+        <h1>
+          Discover Our Popular Courses
+        </h1>
+        <p>
+          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+        </p>
+      </div>
+    <section class="container my-5">
+<div class="row row-cols-lg-2 row-cols-md-1">
+  <div class="col-lg-6 col-md-12 col-12">
+    <div class="card mb-3">
+      <div class="row row-cols-2 g-0">
+        <div class="col-md-4 col-12">
+          <img src="images/course/course-1.png" class="img-fluid w-100 rounded-start" alt="">
+        </div>
+        <div class="col-md-8 col-12">
+          <div class="card-body d-flex flex-column align-items-start p-4">
+            <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
+            <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card.</p>
+            <p class="card-text h5 text-info fw-bold">Price : 20$</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+    </section>
+    <!---------------------
+       Course Section End 
+      ------------------------->
+  </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
