all couses are added and course section is finished

--- a/index.html
+++ b/index.html
@@ -135,38 +135,134 @@
       ---------------------->
   </header>
 
+
   <main>
     <!---------------------
        Course Section Start 
       ------------------------->
+      <br> <br> <br>
+    <section class="container">
       <div class="text-center fs-5 m-5">
         <h1>
           Discover Our Popular Courses
         </h1>
         <p>
-          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+          It is a long established fact that a reader will be distracted by the readable content of a page when looking
+          at its layout.
         </p>
       </div>
-    <section class="container my-5">
-<div class="row row-cols-lg-2 row-cols-md-1">
-  <div class="col-lg-6 col-md-12 col-12">
-    <div class="card mb-3">
-      <div class="row row-cols-2 g-0">
-        <div class="col-md-4 col-12">
-          <img src="images/course/course-1.png" class="img-fluid w-100 rounded-start" alt="">
-        </div>
-        <div class="col-md-8 col-12">
-          <div class="card-body d-flex flex-column align-items-start p-4">
-            <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
-            <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card.</p>
-            <p class="card-text h5 text-info fw-bold">Price : 20$</small></p>
+      <section class="container my-5">
+        <div class="row row-cols-lg-2 row-cols-md-1">
+          <div class="col-lg-6 col-md-12 col-12">
+            <div class="card mb-3">
+              <div class="row row-cols-2 g-0">
+                <div class="col-md-4 col-12">
+                  <img src="images/course/course-1.png" class="img-fluid w-100 rounded-start" alt="">
+                </div>
+                <div class="col-md-8 col-12">
+                  <div class="card-body d-flex flex-column align-items-start p-4">
+                    <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
+                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up
+                      the bulk of the card.</p>
+                    <p class="card-text h5 text-info fw-bold">Price : $200</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 col-12">
+            <div class="card mb-3">
+              <div class="row row-cols-2 g-0">
+                <div class="col-md-4 col-12">
+                  <img src="images/course/course-2.png" class="img-fluid w-100 rounded-start" alt="">
+                </div>
+                <div class="col-md-8 col-12">
+                  <div class="card-body d-flex flex-column align-items-start p-4">
+                    <h5 class="card-title fw-semibold">Javascript Basic to advanced</h5>
+                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up
+                      the bulk of the card.</p>
+                    <p class="card-text h5 text-info fw-bold">Price : $150</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 col-12">
+            <div class="card mb-3">
+              <div class="row row-cols-2 g-0">
+                <div class="col-md-4 col-12">
+                  <img src="images/course/course-3.png" class="img-fluid w-100 rounded-start" alt="">
+                </div>
+                <div class="col-md-8 col-12">
+                  <div class="card-body d-flex flex-column align-items-start p-4">
+                    <h5 class="card-title fw-semibold">Fullstack Web Development</h5>
+                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up
+                      the bulk of the card.</p>
+                    <p class="card-text h5 text-info fw-bold">Price : $300</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 col-12">
+            <div class="card mb-3">
+              <div class="row row-cols-2 g-0">
+                <div class="col-md-4 col-12">
+                  <img src="images/course/course-4.png" class="img-fluid w-100 rounded-start" alt="">
+                </div>
+                <div class="col-md-8 col-12">
+                  <div class="card-body d-flex flex-column align-items-start p-4">
+                    <h5 class="card-title fw-semibold">Digital Marketing</h5>
+                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up
+                      the bulk of the card.</p>
+                    <p class="card-text h5 text-info fw-bold">Price : $150</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 col-12">
+            <div class="card mb-3">
+              <div class="row row-cols-2 g-0">
+                <div class="col-md-4 col-12">
+                  <img src="images/course/course-5.png" class="img-fluid w-100 rounded-start" alt="">
+                </div>
+                <div class="col-md-8 col-12">
+                  <div class="card-body d-flex flex-column align-items-start p-4">
+                    <h5 class="card-title fw-semibold">Photography Basic Rules</h5>
+                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up
+                      the bulk of the card.</p>
+                    <p class="card-text h5 text-info fw-bold">Price : $100</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 col-12">
+            <div class="card mb-3">
+              <div class="row row-cols-2 g-0">
+                <div class="col-md-4 col-12">
+                  <img src="images/course/course-6.png" class="img-fluid w-100 rounded-start" alt="">
+                </div>
+                <div class="col-md-8 col-12">
+                  <div class="card-body d-flex flex-column align-items-start p-4">
+                    <h5 class="card-title fw-semibold">Motion Graphics</h5>
+                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up
+                      the bulk of the card.</p>
+                    <p class="card-text h5 text-info fw-bold">Price : $150</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+      </section>
+      <div class="text-center">
+        <button class="btn btn-info py-3 px-4 "><a href="" class="fw-semibold text-decoration-none text-white">See More
+            Courses</a></button>
       </div>
-    </div>
-  </div>
-</div>
     </section>
+
     <!---------------------
        Course Section End 
       ------------------------->
