--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <!---------------------
        Course Section Start 
       ------------------------->
-      <br> <br> <br>
+    <br> <br> <br>
     <section class="container">
       <div class="text-center fs-5 m-5">
         <h1>
@@ -266,6 +266,120 @@
     <!---------------------
        Course Section End 
       ------------------------->
+    <section class="container bg-info my-5">
+      <div class="row row-cols-lg-2 row-cols-md-1 row-cols-1 p-5">
+        <div class="col-lg-8 col-md-12">
+          <h1 class="display-4 fw-bolder text-white">
+            Ready to join?
+          </h1>
+          <p class="text-white">
+            It is a long established fact that a reader will be distracted by the readable content of a page when
+            looking at its layout.
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-12 py-4">
+          <button class="btn bg-white py-3 px-4"><a href="" class="fw-semibold text-decoration-none text-info">Register
+              Now
+
+            </a>
+          </button>
+        </div>
+      </div>
+    </section>
+    <!------------------
+       Frequently Asked Questions Start 
+      --------------------->
+    <br> <br> <br>
+    <section class="container">
+      <div class="text-center my-5">
+        <h1 class="display-4 fw-bolder">
+          Frequently Asked Questions
+        </h1>
+        <p class="fs-5">
+          It is a long established fact that a reader will be distracted by the readable content of a page when looking
+          at its layout.
+        </p>
+      </div>
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+              aria-expanded="true" aria-controls="collapseOne">
+              What is the difference between flexbox and grid?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              The key difference is that CSS Grid can be used to create two-dimensional layouts, while Flexbox can only be used
+              to create one-dimensional layouts. That means you can place components along the X- and Y-axis in CSS Grid
+              and only one axis in Flexbox
+              A flex layout can also wrap in multiple rows or columns and flexbox treats each row or column as a
+              separate entity, based on its content and the available space.
+              On the other hand, CSS Grid lets you work along two axes: horizontally and vertically. Grid allows you to
+              create two-dimensional layouts where you can precisely place grid items into cells defined by rows and
+              columns.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              What is the difference between bootstrap and tailwind css?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Bootstrap is the most popular HTML, CSS, and JavaScript framework for building responsive, mobile-first
+              projects on the web. Tailwind CSS, on the other hand, is the most popular utility-first CSS framework for
+              fast UI development.
+              The main difference between TailwindCSS and Bootstrap is that Tailwind CSS is not a UI kit. Unlike UI kits
+              such as Bootstrap, Bulma, and Foundation, Tailwind CSS doesn’t have a default theme or built-in UI
+              components. Instead, it comes with predesigned widgets you can use to build your site from scratch.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              What is CSS Box Model?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Every element that can be displayed on a web page is comprised of one or more rectangular boxes. CSS box
+              model typically describes how these rectangular boxes are laid out on a web page. These boxes can have
+              different properties and can interact with each other in different ways, but every box has a content area
+              and optional surrounding padding, border, and margin areas.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              What is semantic tag?
+            </button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation.
+              It makes HTML more comprehensible by better defining the different sections and layout of web pages.
+              The semantic HTML tags help the search engines and other user devices to determine the importance and
+              context of web pages. It has greater accessibility. It offers a better user experience.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!------------------
+       Frequently Asked Questions End 
+      --------------------->
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
