--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
             data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              The key difference is that CSS Grid can be used to create two-dimensional layouts, while Flexbox can only be used
+              The key difference is that CSS Grid can be used to create two-dimensional layouts, while Flexbox can only
+              be used
               to create one-dimensional layouts. That means you can place components along the X- and Y-axis in CSS Grid
               and only one axis in Flexbox
               A flex layout can also wrap in multiple rows or columns and flexbox treats each row or column as a
@@ -380,6 +381,26 @@
     <!------------------
        Frequently Asked Questions End 
       --------------------->
+    <!-----------------------
+         Trusted company section for desktop view Start
+        -------------------------------->
+    <br> <br> <br>
+    <section class="container mt-5 d-none d-lg-block d-xl-block d-xxl-block">
+      <h1 class="display-5 fw-bolder text-center">
+        Trusted by over 800+ companies
+      </h1>
+      <div class="container-fluid mb-5">
+        <img src="images/company/company-1.png" alt="" class="me-3">
+        <img src="images/company/company-2.png" alt="" class="me-3">
+        <img src="images/company/company-3.png" alt="" class="me-3">
+        <img src="images/company/company-4.png" alt="" class="me-3">
+        <img src="images/company/company-5.png" alt="" class="me-3">
+        <img src="images/company/company-6.png" alt="" class="">
+      </div>
+    </section>
+    <!-----------------------
+         Trusted company section for desktop view End
+        -------------------------------->
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
