--- a/index.html
+++ b/index.html
@@ -266,26 +266,73 @@
     <!---------------------
        Course Section End 
       ------------------------->
-    <section class="container bg-info my-5">
-      <div class="row row-cols-lg-2 row-cols-md-1 row-cols-1 p-5">
-        <div class="col-lg-8 col-md-12">
-          <h1 class="display-4 fw-bolder text-white">
-            Ready to join?
-          </h1>
-          <p class="text-white">
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout.
-          </p>
+    <!-------------------------
+       Register Now Modal Part Start 
+      ----------------------------->
+      <section class="container bg-info my-5">
+        <div class="row row-cols-lg-2 row-cols-md-1 row-cols-1 p-5">
+          <div class="col-lg-8 col-md-12">
+            <h1 class="display-4 fw-bolder text-white">
+              Ready to join?
+            </h1>
+            <p class="text-white">
+              It is a long established fact that a reader will be distracted by the readable content of a page when
+              looking at its layout.
+            </p>
+          </div>
+          <div class="col-lg-4 col-md-12 py-4">
+            <button class="btn bg-white py-3 px-4" data-bs-target="#modalSignin" data-bs-toggle="modal"><a href="" class="fw-semibold text-decoration-none text-info">Register
+                Now
+              </a>
+            </button>
+          </div>
         </div>
-        <div class="col-lg-4 col-md-12 py-4">
-          <button class="btn bg-white py-3 px-4"><a href="" class="fw-semibold text-decoration-none text-info">Register
-              Now
+        <div class="modal modal-signin bg-secondary py-5" id="modalSignin">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content rounded-4 shadow">
+              <div class="modal-header p-5 pb-4 border-bottom-0">
+                <h2 class="fw-bold mb-0">Sign up for free</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+        
+              <div class="modal-body p-5 pt-0">
+                <form class="">
+                  <div class="form-floating mb-3">
+                    <input type="email" class="form-control rounded-3" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                  </div>
+                  <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Sign up</button>
+                  <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+                  <hr class="my-4">
+                  <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
+                  <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-3" type="submit">
+                    <svg class="bi me-1" width="16" height="16"><use xlink:href="#twitter"/></svg>
+                    Sign up with Twitter
+                  </button>
+                  <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
+                    <svg class="bi me-1" width="16" height="16"><use xlink:href="#facebook"/></svg>
+                    Sign up with Facebook
+                  </button>
+                  <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
+                    <svg class="bi me-1" width="16" height="16"><use xlink:href="#github"/></svg>
+                    Sign up with GitHub
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    <!-------------------------
+       Register Now Modal Part End 
+      ----------------------------->
 
-            </a>
-          </button>
-        </div>
-      </div>
-    </section>
+
+
     <!------------------
        Frequently Asked Questions Start 
       --------------------->
@@ -401,7 +448,12 @@
     <!-----------------------
          Trusted company section for desktop view End
         -------------------------------->
+
   </main>
+  <br> <br> <br>
+  <footer>
+    
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
