--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       <h1 class="display-5 fw-bolder text-center">
         Trusted by over 800+ companies
       </h1>
-      <div class="container-fluid mb-5">
+      <div class="container-fluid mb-5 text-center">
         <img src="images/company/company-1.png" alt="" class="me-3">
         <img src="images/company/company-2.png" alt="" class="me-3">
         <img src="images/company/company-3.png" alt="" class="me-3">
