--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BrainTech Learning</title>
+  <!-- Stylsheet  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/d95c090c0f.js" crossorigin="anonymous"></script>
+  <!-- Google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -140,7 +148,7 @@
     <!---------------------
        Course Section Start 
       ------------------------->
-    <br> <br> <br>
+    <br> <br>
     <section class="container">
       <div class="text-center fs-5 m-5">
         <h1>
@@ -151,7 +159,7 @@
           at its layout.
         </p>
       </div>
-      <section class="container my-5">
+      <section class="container my-4">
         <div class="row row-cols-lg-2 row-cols-md-1">
           <div class="col-lg-6 col-md-12 col-12">
             <div class="card mb-3">
@@ -269,64 +277,72 @@
     <!-------------------------
        Register Now Modal Part Start 
       ----------------------------->
-      <section class="container bg-info my-5">
-        <div class="row row-cols-lg-2 row-cols-md-1 row-cols-1 p-5">
-          <div class="col-lg-8 col-md-12">
-            <h1 class="display-4 fw-bolder text-white">
-              Ready to join?
-            </h1>
-            <p class="text-white">
-              It is a long established fact that a reader will be distracted by the readable content of a page when
-              looking at its layout.
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-12 py-4">
-            <button class="btn bg-white py-3 px-4" data-bs-target="#modalSignin" data-bs-toggle="modal"><a href="" class="fw-semibold text-decoration-none text-info">Register
-                Now
-              </a>
-            </button>
-          </div>
+    <br> <br> <br>
+    <section class="container bg-info my-5 rounded-2 p-5">
+      <div class="row row-cols-lg-2 row-cols-md-1 row-cols-1 p-5">
+        <div class="col-lg-8 col-md-12">
+          <h1 class="display-4 fw-bolder text-white">
+            Ready to join?
+          </h1>
+          <p class="text-white">
+            It is a long established fact that a reader will be distracted by the readable content of a page when
+            looking at its layout.
+          </p>
         </div>
-        <div class="modal modal-signin bg-secondary py-5" id="modalSignin">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content rounded-4 shadow">
-              <div class="modal-header p-5 pb-4 border-bottom-0">
-                <h2 class="fw-bold mb-0">Sign up for free</h2>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-        
-              <div class="modal-body p-5 pt-0">
-                <form class="">
-                  <div class="form-floating mb-3">
-                    <input type="email" class="form-control rounded-3" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Email address</label>
-                  </div>
-                  <div class="form-floating mb-3">
-                    <input type="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Password</label>
-                  </div>
-                  <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Sign up</button>
-                  <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
-                  <hr class="my-4">
-                  <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
-                  <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-3" type="submit">
-                    <svg class="bi me-1" width="16" height="16"><use xlink:href="#twitter"/></svg>
-                    Sign up with Twitter
-                  </button>
-                  <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
-                    <svg class="bi me-1" width="16" height="16"><use xlink:href="#facebook"/></svg>
-                    Sign up with Facebook
-                  </button>
-                  <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
-                    <svg class="bi me-1" width="16" height="16"><use xlink:href="#github"/></svg>
-                    Sign up with GitHub
-                  </button>
-                </form>
-              </div>
+        <div class="col-lg-4 col-md-12 py-4">
+          <button class="btn bg-white py-3 px-4" data-bs-target="#modalSignin" data-bs-toggle="modal"><a href=""
+              class="fw-semibold text-decoration-none text-info">Register
+              Now
+            </a>
+          </button>
+        </div>
+      </div>
+      <div class="modal modal-signin bg-secondary py-5" id="modalSignin">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content rounded-4 shadow">
+            <div class="modal-header p-5 pb-4 border-bottom-0">
+              <h2 class="fw-bold mb-0">Sign up for free</h2>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body p-5 pt-0">
+              <form class="">
+                <div class="form-floating mb-3">
+                  <input type="email" class="form-control rounded-3" id="floatingInput" placeholder="name@example.com">
+                  <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input type="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password">
+                  <label for="floatingPassword">Password</label>
+                </div>
+                <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Sign up</button>
+                <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+                <hr class="my-4">
+                <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
+                <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-3" type="submit">
+                  <svg class="bi me-1" width="16" height="16">
+                    <use xlink:href="#twitter" />
+                  </svg>
+                  Sign up with Twitter
+                </button>
+                <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
+                  <svg class="bi me-1" width="16" height="16">
+                    <use xlink:href="#facebook" />
+                  </svg>
+                  Sign up with Facebook
+                </button>
+                <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
+                  <svg class="bi me-1" width="16" height="16">
+                    <use xlink:href="#github" />
+                  </svg>
+                  Sign up with GitHub
+                </button>
+              </form>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
     <!-------------------------
        Register Now Modal Part End 
       ----------------------------->
@@ -336,7 +352,7 @@
     <!------------------
        Frequently Asked Questions Start 
       --------------------->
-    <br> <br> <br>
+    <br> <br>
     <section class="container">
       <div class="text-center my-5">
         <h1 class="display-4 fw-bolder">
@@ -451,9 +467,33 @@
 
   </main>
   <br> <br> <br>
+  <!----------------
+     Footer Start 
+    ------------------>
   <footer>
-    
+    <div class="card text-center bg-dark p-5">
+      <div class="card-body text-center">
+        <h1 class="card-title fw-bolder text-white">BrainTech Learning</h1>
+        <p class="card-text text-secondary fs-5">Office 41, Zawaya Buildin, Ghala Muscat,
+          Sultanate of Oman</p>
+        <a href="#" class="text-decoration-none text-secondary fs-5">Privacy Ploicy | Terms of use</a>
+        <div class="text-center fs-1 py-3">
+          <a href="https://www.facebook.com/programmingHero" target="_blank"><i
+              class="fa-brands fa-facebook  text-white me-3"></i></a>
+          <a href="https://www.instagram.com/programminghero/" target="_blank"><i
+              class="fa-brands fa-instagram  text-white me-3"></i></a>
+          <a href="https://www.linkedin.com/company/programminghero/" target="_blank"><i
+              class="fa-brands fa-linkedin  text-white me-3"></i></a>
+          <a href="https://www.youtube.com/c/ProgrammingHero" target="_blank"><i
+              class="fa-brands fa-youtube  text-white"></i></a>
+        </div>
+
+      </div>
+    </div>
   </footer>
+  <!----------------
+     Footer End 
+    ------------------>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
