almost all criterion are fullfilled

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <!--------------------- 
       Heading Banner Start
     ------------------------>
-    <div id="carouselExampleFade" class="carousel carousel-white slide  carousel-fade container mt-5"
-      data-bs-ride="true">
+    <div id="carouselExampleFade" class="carousel carousel-white slide  carousel-fade container mt-2"
+      data-bs-ride="true" data-bs-interval="2000">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
@@ -77,16 +77,17 @@
         <div class="carousel-item active">
           <img src="images/cover/cover-1.png" class="img-fluid" alt="">
           <div class="carousel-caption">
-            <div class="d-flex flex-column align-items-center mb-5">
-              <h1 class="display-4 fw-semibold">
+            <div class="d-flex flex-column align-items-center">
+              <h1 class="display-4 fw-semibold " id="carousel-heading">
                 <span>
                   Get Started Digital
                 </span><br>
                 <span>Learning</span>
               </h1>
-              <p class="fs-5">It is a long established fact that a reader will be distracted by the readable
-                content of a page when looking at its layout.</p>
-              <button class="btn btn-info py-3 px-4"><a href="" class="fw-semibold text-decoration-none text-white">Get
+              <p class="fs-5 carousel-para">Start, switch, or advance your career with more than 5,000 courses,
+                Professional Certificates, and degrees from world-class universities and companies.</p>
+              <button class="btn btn-info py-3 px-4" id="carousel-button"><a href=""
+                  class="fw-semibold text-decoration-none text-white carousel-para">Get
                   Started</a></button>
             </div>
 
@@ -94,7 +95,7 @@
         </div>
         <div class="carousel-item">
           <img src="images/cover/cover-2.png" class="img-fluid  " alt="">
-          <div class="carousel-caption mb-5">
+          <div class="carousel-caption">
             <div class="d-flex flex-column align-items-center">
               <h1 class="display-4 fw-semibold">
                 <span>
@@ -102,8 +103,8 @@
                 </span><br>
                 <span>Learning</span>
               </h1>
-              <p class="fs-5">It is a long established fact that a reader will be distracted by the readable
-                content of a page when looking at its layout.</p>
+              <p class="fs-5">Start, switch, or advance your career with more than 5,000 courses, Professional
+                Certificates, and degrees from world-class universities and companies.</p>
               <button class="btn btn-info py-3 px-4"><a href="" class="fw-semibold text-decoration-none text-white">Get
                   Started</a></button>
             </div>
@@ -112,16 +113,16 @@
         </div>
         <div class="carousel-item">
           <img src="images/cover/cover-3.png" class="img-fluid  " alt="">
-          <div class="carousel-caption mb-5">
-            <div class="d-flex flex-column align-items-center mb-5">
+          <div class="carousel-caption">
+            <div class="d-flex flex-column align-items-center">
               <h1 class="display-4 fw-semibold">
                 <span>
                   Get Started Digital
                 </span><br>
                 <span>Learning</span>
               </h1>
-              <p class="fs-5">It is a long established fact that a reader will be distracted by the readable
-                content of a page when looking at its layout.</p>
+              <p class="fs-5">Start, switch, or advance your career with more than 5,000 courses, Professional
+                Certificates, and degrees from world-class universities and companies.</p>
               <button class="btn btn-info py-3 px-4"><a href="" class="fw-semibold text-decoration-none text-white">Get
                   Started</a></button>
             </div>
@@ -148,13 +149,13 @@
     <!---------------------
        Course Section Start 
       ------------------------->
-    <br> <br>
+    <br>
     <section class="container">
       <div class="text-center fs-5 m-5">
-        <h1>
+        <h1 class="fs-1 fw-bolder">
           Discover Our Popular Courses
         </h1>
-        <p>
+        <p class="fs-5">
           It is a long established fact that a reader will be distracted by the readable content of a page when looking
           at its layout.
         </p>
@@ -297,7 +298,7 @@
           </button>
         </div>
       </div>
-      <div class="modal modal-signin bg-secondary py-5" id="modalSignin">
+      <div class="modal modal-signin  bg-secondary py-5" id="modalSignin">
         <div class="modal-dialog" role="document">
           <div class="modal-content rounded-4 shadow">
             <div class="modal-header p-5 pb-4 border-bottom-0">
@@ -449,10 +450,10 @@
         -------------------------------->
     <br> <br> <br>
     <section class="container mt-5 d-none d-lg-block d-xl-block d-xxl-block">
-      <h1 class="display-5 fw-bolder text-center">
+      <h1 class="fs-2 fw-bolder text-center">
         Trusted by over 800+ companies
       </h1>
-      <div class="container-fluid mb-5 text-center">
+      <div class="container-fluid mb-5 text-center py-3">
         <img src="images/company/company-1.png" alt="" class="me-3">
         <img src="images/company/company-2.png" alt="" class="me-3">
         <img src="images/company/company-3.png" alt="" class="me-3">
