--- a/index.html
+++ b/index.html
@@ -291,21 +291,23 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-12 py-4">
-          <button class="btn bg-white py-3 px-4" data-bs-target="#modalSignin" data-bs-toggle="modal"><a href=""
-              class="fw-semibold text-decoration-none text-info">Register
-              Now
+          <button class="btn bg-white py-3 px-5 text-info fw-semibold" data-bs-toggle="modal" data-bs-target="#exampleModal"
+            data-bs-whatever="@getbootstrap">Register
+            Now
             </a>
           </button>
         </div>
       </div>
-      <div class="modal modal-signin  bg-secondary py-5" id="modalSignin">
+
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content rounded-4 shadow">
             <div class="modal-header p-5 pb-4 border-bottom-0">
+              <!-- <h5 class="modal-title">Modal title</h5> -->
               <h2 class="fw-bold mb-0">Sign up for free</h2>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-
+      
             <div class="modal-body p-5 pt-0">
               <form class="">
                 <div class="form-floating mb-3">
@@ -321,21 +323,15 @@
                 <hr class="my-4">
                 <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
                 <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-3" type="submit">
-                  <svg class="bi me-1" width="16" height="16">
-                    <use xlink:href="#twitter" />
-                  </svg>
+                  <svg class="bi me-1" width="16" height="16"><use xlink:href="#twitter"/></svg>
                   Sign up with Twitter
                 </button>
                 <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
-                  <svg class="bi me-1" width="16" height="16">
-                    <use xlink:href="#facebook" />
-                  </svg>
+                  <svg class="bi me-1" width="16" height="16"><use xlink:href="#facebook"/></svg>
                   Sign up with Facebook
                 </button>
                 <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
-                  <svg class="bi me-1" width="16" height="16">
-                    <use xlink:href="#github" />
-                  </svg>
+                  <svg class="bi me-1" width="16" height="16"><use xlink:href="#github"/></svg>
                   Sign up with GitHub
                 </button>
               </form>
