--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </div>
       <section class="container my-4">
         <div class="row row-cols-lg-2 row-cols-md-1">
-          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px">
+          <div class="col-lg-6 col-md-12 col-12">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
@@ -179,7 +179,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px">
+          <div class="col-lg-6 col-md-12 col-12">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
@@ -196,7 +196,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px">
+          <div class="col-lg-6 col-md-12 col-12">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
@@ -213,7 +213,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px" >
+          <div class="col-lg-6 col-md-12 col-12">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
@@ -230,7 +230,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px">
+          <div class="col-lg-6 col-md-12 col-12">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
@@ -247,7 +247,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px">
+          <div class="col-lg-6 col-md-12 col-12">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
