modified at all

--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
           <img src="images/cover/cover-1.png" class="img-fluid" alt="">
           <div class="carousel-caption">
             <div class="d-flex flex-column align-items-center">
-              <h1 class="display-4 fw-semibold " id="carousel-heading">
+              <h1 class="display-4 fw-semibold carsl-heading">
                 <span>
                   Get Started Digital
                 </span><br>
                 <span>Learning</span>
               </h1>
-              <p class="fs-5 carousel-para">Start, switch, or advance your career with more than 5,000 courses,
+              <p class="fs-5 carsl-para">Start, switch, or advance your career with more than 5,000 courses,
                 Professional Certificates, and degrees from world-class universities and companies.</p>
-              <button class="btn btn-info py-3 px-4" id="carousel-button"><a href=""
-                  class="fw-semibold text-decoration-none text-white carousel-para">Get
+              <button class="btn btn-info py-3 px-4 carsl-button"><a href=""
+                  class="fw-semibold text-decoration-none text-white carsl-para">Get
                   Started</a></button>
             </div>
 
@@ -97,15 +97,15 @@
           <img src="images/cover/cover-2.png" class="img-fluid  " alt="">
           <div class="carousel-caption">
             <div class="d-flex flex-column align-items-center">
-              <h1 class="display-4 fw-semibold">
+              <h1 class="display-4 fw-semibold carsl-heading">
                 <span>
                   Get Started Digital
                 </span><br>
                 <span>Learning</span>
               </h1>
-              <p class="fs-5">Start, switch, or advance your career with more than 5,000 courses, Professional
+              <p class="fs-5 carsl-para">Start, switch, or advance your career with more than 5,000 courses, Professional
                 Certificates, and degrees from world-class universities and companies.</p>
-              <button class="btn btn-info py-3 px-4"><a href="" class="fw-semibold text-decoration-none text-white">Get
+              <button class="btn btn-info py-3 px-4 carsl-button"><a href="" class="fw-semibold text-decoration-none text-white carsl-para">Get
                   Started</a></button>
             </div>
 
@@ -115,15 +115,15 @@
           <img src="images/cover/cover-3.png" class="img-fluid  " alt="">
           <div class="carousel-caption">
             <div class="d-flex flex-column align-items-center">
-              <h1 class="display-4 fw-semibold">
+              <h1 class="display-4 fw-semibold carsl-heading">
                 <span>
                   Get Started Digital
                 </span><br>
                 <span>Learning</span>
               </h1>
-              <p class="fs-5">Start, switch, or advance your career with more than 5,000 courses, Professional
+              <p class="fs-5 carsl-para">Start, switch, or advance your career with more than 5,000 courses, Professional
                 Certificates, and degrees from world-class universities and companies.</p>
-              <button class="btn btn-info py-3 px-4"><a href="" class="fw-semibold text-decoration-none text-white">Get
+              <button class="btn btn-info py-3 px-4 carsl-button"><a href="" class="fw-semibold text-decoration-none text-white carsl-para">Get
                   Started</a></button>
             </div>
 
