--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
                 </span><br>
                 <span>Learning</span>
               </h1>
-              <p class="fs-5 carsl-para">Start, switch, or advance your career with more than 5,000 courses, Professional
+              <p class="fs-5 carsl-para">Start, switch, or advance your career with more than 5,000 courses,
+                Professional
                 Certificates, and degrees from world-class universities and companies.</p>
-              <button class="btn btn-info py-3 px-4 carsl-button"><a href="" class="fw-semibold text-decoration-none text-white carsl-para">Get
+              <button class="btn btn-info py-3 px-4 carsl-button"><a href=""
+                  class="fw-semibold text-decoration-none text-white carsl-para">Get
                   Started</a></button>
             </div>
 
@@ -121,9 +123,11 @@
                 </span><br>
                 <span>Learning</span>
               </h1>
-              <p class="fs-5 carsl-para">Start, switch, or advance your career with more than 5,000 courses, Professional
+              <p class="fs-5 carsl-para">Start, switch, or advance your career with more than 5,000 courses,
+                Professional
                 Certificates, and degrees from world-class universities and companies.</p>
-              <button class="btn btn-info py-3 px-4 carsl-button"><a href="" class="fw-semibold text-decoration-none text-white carsl-para">Get
+              <button class="btn btn-info py-3 px-4 carsl-button"><a href=""
+                  class="fw-semibold text-decoration-none text-white carsl-para">Get
                   Started</a></button>
             </div>
 
@@ -166,7 +170,8 @@
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-1.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
+                  <img src="images/course/course-1.png" class="img-fluid h-100 d-inline-block w-100 rounded-start"
+                    alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -183,7 +188,8 @@
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-2.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
+                  <img src="images/course/course-2.png" class="img-fluid h-100 d-inline-block w-100 rounded-start"
+                    alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -200,7 +206,8 @@
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-3.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
+                  <img src="images/course/course-3.png" class="img-fluid h-100 d-inline-block w-100 rounded-start"
+                    alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -217,7 +224,8 @@
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-4.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
+                  <img src="images/course/course-4.png" class="img-fluid h-100 d-inline-block w-100 rounded-start"
+                    alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -234,7 +242,8 @@
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-5.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
+                  <img src="images/course/course-5.png" class="img-fluid h-100 d-inline-block w-100 rounded-start"
+                    alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -251,7 +260,8 @@
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-6.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
+                  <img src="images/course/course-6.png" class="img-fluid h-100 d-inline-block w-100 rounded-start"
+                    alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -291,8 +301,8 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-12 py-4">
-          <button class="btn bg-white py-3 px-5 text-info fw-semibold" data-bs-toggle="modal" data-bs-target="#exampleModal"
-            data-bs-whatever="@getbootstrap">Register
+          <button class="btn bg-white py-3 px-5 text-info fw-semibold" data-bs-toggle="modal"
+            data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Register
             Now
             </a>
           </button>
@@ -307,7 +317,7 @@
               <h2 class="fw-bold mb-0">Sign up for free</h2>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-      
+
             <div class="modal-body p-5 pt-0">
               <form class="">
                 <div class="form-floating mb-3">
@@ -323,15 +333,21 @@
                 <hr class="my-4">
                 <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
                 <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-3" type="submit">
-                  <svg class="bi me-1" width="16" height="16"><use xlink:href="#twitter"/></svg>
+                  <svg class="bi me-1" width="16" height="16">
+                    <use xlink:href="#twitter" />
+                  </svg>
                   Sign up with Twitter
                 </button>
                 <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
-                  <svg class="bi me-1" width="16" height="16"><use xlink:href="#facebook"/></svg>
+                  <svg class="bi me-1" width="16" height="16">
+                    <use xlink:href="#facebook" />
+                  </svg>
                   Sign up with Facebook
                 </button>
                 <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
-                  <svg class="bi me-1" width="16" height="16"><use xlink:href="#github"/></svg>
+                  <svg class="bi me-1" width="16" height="16">
+                    <use xlink:href="#github" />
+                  </svg>
                   Sign up with GitHub
                 </button>
               </form>
